Misc doc updates.

--- a/doc/gawktexi.in
+++ b/doc/gawktexi.in
@@ -1330,8 +1330,8 @@ language that makes it easy to handle simple data-reformatting jobs.
 The GNU implementation of @command{awk} is called @command{gawk}; if you
 invoke it with the proper options or environment variables,
 it is fully compatible with
-the POSIX@footnote{The 2008 POSIX standard is accessible online at
-@w{@url{http://www.opengroup.org/onlinepubs/9699919799/}.}}
+the POSIX@footnote{The 2018 POSIX standard is accessible online at
+@w{@url{https://pubs.opengroup.org/onlinepubs/9699919799/}.}}
 specification of the @command{awk} language
 and with the Unix version of @command{awk} maintained
 by Brian Kernighan.
@@ -2029,7 +2029,7 @@ Of significant note for that edition was the addition of @ref{Debugger}.
 
 For FSF edition
 @ifclear FOR_PRINT
-@value{EDITION},
+5.0,
 @end ifclear
 @ifset FOR_PRINT
 @value{EDITION}
@@ -37832,7 +37832,7 @@ The ability to delete all of an array at once with @samp{delete @var{array}}
 @xref{Common Extensions} for a list of common extensions
 not permitted by the POSIX standard.
 
-The 2008 POSIX standard can be found online at
+The 2018 POSIX standard can be found online at
 @url{http://pubs.opengroup.org/onlinepubs/9699919799/}.
 
 
@@ -41955,7 +41955,7 @@ to provide a minimal yet powerful set of features for creating extensions.
 @node Extension Future Growth
 @appendixsubsec Room For Future Growth
 
-The API can later be expanded, in two ways:
+The API can later be expanded, in at least the following way:
 
 @itemize @value{BULLET}
 @item
@@ -41965,15 +41965,10 @@ to @command{gawk} with each function call.  This mechanism allows
 @command{gawk} to identify the extension calling into it, should it need
 to know.
 
-@item
-Similarly, the extension passes a ``name space'' into @command{gawk}
-when it registers each extension function.  This accommodates a possible future
-mechanism for grouping extension functions and possibly avoiding name
-conflicts.
 @end itemize
 
 Of course, as of this writing, no decisions have been made with respect
-to any of the above.
+to the above.
 
 @node Notes summary
 @appendixsec Summary
@@ -43000,7 +42995,7 @@ that specify a Portable Operating System interface.  The ``IX'' denotes
 the Unix heritage of these standards.  The main standard of interest for
 @command{awk} users is
 @cite{IEEE Standard for Information Technology, Standard 1003.1-2008}.
-The 2008 POSIX standard can be found online at
+The 2018 POSIX standard can be found online at
 @url{http://pubs.opengroup.org/onlinepubs/9699919799/}.
 
 @item Precedence
