Update Italian manual.

--- a/doc/it/gawktexi.in
+++ b/doc/it/gawktexi.in
@@ -46853,7 +46853,7 @@ Il nome di una serie di standard che specificano l'interfaccia di un Sistema
 Operativo Portabile (Portable Operating System).  La ``IX'' specifica
 che questi standard sono stati originati dallo Unix.
 Lo standard pi@`u rilevante per gli utenti @command{awk} @`e lo
-@cite{IEEE Standard for Information Technology, Standard 1003.1-2008}.
+@cite{IEEE Standard for Information Technology, Standard 1003.1@sup{TM}-2017
 Lo standard POSIX 2018 pu@`o essere trovato in rete all'indirizzo:
 @w{@url{https://pubs.opengroup.org/onlinepubs/9699919799/}}.
 
