Update Italian manual.

--- a/doc/it/gawktexi.in
+++ b/doc/it/gawktexi.in
@@ -1516,7 +1516,7 @@ invocato con le opzioni o con le variabili d'ambiente appropriate,
 (@pxref{Opzioni}), @`e pienamente
 compatibile con le specifiche
 POSIX@footnote{Lo standard POSIX 2018 @`e accessibile in rete all'indirizzo
-@url{https://pubs.opengroup.org/onlinepubs/9699919799/a}.}
+@url{https://pubs.opengroup.org/onlinepubs/9699919799/}.}
 del linguaggio @command{awk}
 e con la versione Unix di @command{awk} mantenuta
 da Brian Kernighan.
@@ -46854,6 +46854,7 @@ Operativo Portabile (Portable Operating System).  La ``IX'' specifica
 che questi standard sono stati originati dallo Unix.
 Lo standard pi@`u rilevante per gli utenti @command{awk} @`e lo
 @cite{IEEE Standard for Information Technology, Standard 1003.1@sup{TM}-2017
+(Revisione dello Standard IEEE 1003.1-2008)}.
 Lo standard POSIX 2018 pu@`o essere trovato in rete all'indirizzo:
 @w{@url{https://pubs.opengroup.org/onlinepubs/9699919799/}}.
 
