--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -630,6 +630,9 @@ EXTRA_DIST = \
 	fpat7.awk \
 	fpat7.in \
 	fpat7.ok \
+	fpat8.awk \
+	fpat8.in \
+	fpat8.ok \
 	fpatnull.awk \
 	fpatnull.in \
 	fpatnull.ok \
@@ -1646,8 +1649,8 @@ GAWK_EXT_TESTS = \
 	clos1way6 crlf \
 	dbugeval dbugeval2 dbugeval3 dbugtypedre1 dbugtypedre2 delsub \
 	devfd devfd1 devfd2 dfacheck1 dumpvars \
-	errno exit \
-	fieldwdth forcenum fpat1 fpat2 fpat3 fpat4 fpat5 fpat6 fpat7 fpatnull \
+	errno exit fieldwdth forcenum \
+	fpat1 fpat2 fpat3 fpat4 fpat5 fpat6 fpat7 fpat8 fpatnull \
 	fsfwfs funlen functab1 functab2 functab3 \
 	fwtest fwtest2 fwtest3 fwtest4 fwtest5 fwtest6 fwtest7 fwtest8 \
 	genpot gensub gensub2 gensub3 getlndir gnuops2 gnuops3 gnureops gsubind \
@@ -4285,6 +4288,11 @@ fpat6:
 	@-$(CMP) "$(srcdir)"/$@.ok _$@ && rm -f _$@
 
 fpat7:
+	@echo $@
+	@AWKPATH="$(srcdir)" $(AWK) -f $@.awk  < "$(srcdir)"/$@.in >_$@ 2>&1 || echo EXIT CODE: $$? >>_$@
+	@-$(CMP) "$(srcdir)"/$@.ok _$@ && rm -f _$@
+
+fpat8:
 	@echo $@
 	@AWKPATH="$(srcdir)" $(AWK) -f $@.awk  < "$(srcdir)"/$@.in >_$@ 2>&1 || echo EXIT CODE: $$? >>_$@
 	@-$(CMP) "$(srcdir)"/$@.ok _$@ && rm -f _$@
