Typo fixes in the manual.

--- a/doc/gawktexi.in
+++ b/doc/gawktexi.in
@@ -7926,7 +7926,7 @@ contains quotes, that have to be escaped by doubling them. The previously
 described regexps fail to accept quoted fields with both commas and
 quotes inside. He suggests that the simplest @code{FPAT} expression that
 recognizes this kind of fields is @code{/([^,]*)|("([^"]|"")+")/}. He
-provides the following imput data test these variants:
+provides the following input data to test these variants:
 
 @example
 @c file eg/misc/sample.csv
