--- a/doc/it/gawktexi.in
+++ b/doc/it/gawktexi.in
@@ -2469,7 +2469,7 @@ Grazie a Michael Brennan per le Prefazioni.
 @cindex Berry, Karl
 @cindex Smith, Gavin
 Grazie a Patrice Dumas per il nuovo programma @command{makeinfo}.
-Grazie a Karl Berry, che per il lavoro svolto in passato
+Grazie a Karl Berry, per il lavoro svolto in passato
 su Texinfo, e a Gavin Smith, che continua a lavorare per
 migliorare il linguaggio di marcatura Texinfo.
 
@@ -5036,7 +5036,7 @@ attraverso la direttiva @code{@@load}
 Se la variabile d'ambiente @env{AWKLIBPATH} non esiste, o se ha come valore
 la stringa nulla, @command{gawk} usa un percorso di ricerca di default;
 questo normalmente vale @samp{/usr/local/lib/gawk}, anche se il suo valore
-pu@`o essere diverso, a seconda di come @`e stato installato
+pu@`o essere diverso, a seconda di come @`e stato compilato
 @command{gawk}.@footnote{La vostra versione di @command{gawk}
 pu@`o utilizzare una directory differente; dipende da come @command{gawk}
 @`e stato generato e installato.  La directory utilizzata ha il valore
@@ -5579,7 +5579,7 @@ sia contenuto nel primo argomento "non-opzione".
 
 @item
 Tutti gli argomenti "non-opzione", tranne il testo del programma
-specificato come primo argomento "non-opzione" sono messi nel vettore
+specificato come primo argomento "non-opzione", sono messi nel vettore
 @code{ARGV} come spiegato in @ref{ARGC e ARGV}, e sono trattati come
 descritto in @ref{Altri argomenti}.
 @c And I wrote:
@@ -6149,7 +6149,7 @@ spiegato pi@`u avanti in questa lista.)
 La parentesi sinistra (di apertura) @`e sempre un metacarattere;
 per cercare una corrispondenza letterale con una tale parentesi,
 occorre farla precedere da una barra inversa.  Comunque, la
-parentesi destra (di chiusura), @`e speciale solo se eesiste la
+parentesi destra (di chiusura) @`e speciale solo se esiste la
 relativa parentesi sinistra; una parentesi destra senza la
 corrispondente parentesi sinistra @`e considerata (senza dare
 alcun messaggio di avviso) come un normale carattere.
@@ -10736,7 +10736,7 @@ programma @command{awk}:
 
 @example
 awk 'BEGIN @{ print "Nome      Numero"
-             print " --- -     ------ " @}
+             print "----      ------" @}
            @{ printf "%-10s %s\n", $1, $2 @}' mail-list
 @end example
 
@@ -10746,7 +10746,7 @@ risultati usando solo istruzioni @code{printf}:
 
 @example
 awk 'BEGIN @{ printf "%-10s %s\n", "Nome", "Numero"
-             printf "%-10s %s\n", " --- -", " ---  --- " @}
+             printf "%-10s %s\n", "----", "------" @}
            @{ printf "%-10s %s\n", $1, $2 @}' mail-list
 @end example
 
@@ -10761,7 +10761,7 @@ evidenziare memorizzandola in una variabile, cos@`{@dotless{i}}:
 @example
 awk 'BEGIN @{ format = "%-10s %s\n"
              printf format, "Nome", "Numero"
-             printf format, " --- -", " ---  --- " @}
+             printf format, "----", "------" @}
            @{ printf format, $1, $2 @}' mail-list
 @end example
 
@@ -17991,7 +17991,7 @@ che a loro volta vengono prima dei sottovettori.
 
 Se si sceglie di utilizzare questa funzionalit@`a per esaminare
 tutti gli elementi di @code{FUNCTAB} (@pxref{Variabili auto-assegnate}),
-allora l'ordine in cui sono presentati gli elementi @`e: dapprima le
+l'ordine in cui sono presentati gli elementi @`e: dapprima le
 funzioni predefinite (@pxref{Funzioni predefinite}), poi
 le funzioni definite dall'utente (@pxref{Funzioni definite dall'utente})
 e infine le funzioni caricate da un'estensione
@@ -19219,7 +19219,7 @@ a[3] = "ultimo"
 @end example
 
 @quotation NOTA
-A motivo di limitazioni dovute all'implementazione, non si possono usare
+Per limitazioni dovute all'implementazione, non si possono usare
 n@'e @code{SYMTAB} n@'e @code{FUNCTAB} come argomenti di queste 
 funzioni, neppure se si specifica un secondo vettore da utilizzare
 per effettuare l'ordinamento.  Se si tenta di farlo, viene generato
@@ -24652,7 +24652,7 @@ di due punti (@code{:}).
 Se l'argomento corrente sulla riga di comando non corrisponde a
 quest'espressione regolare, vuol dire che non si tratta di un'opzione, e
 quindi viene terminata l'elaborazione delle opzioni.
-A questo punto si controlla se stiamo processando un'opzione corta (che
+A questo punto si controlla se stiamo elaborando un'opzione corta (che
 consiste di una sola lettera), oppure un'opzione lunga (indicata da due
 trattini, p.es. @samp{--filename}).  Se si tratta di un'opzione corta,
 il programma prosegue cos@`{@dotless{i}}:
@@ -33828,7 +33828,7 @@ eseguire programmi piccoli e che non richiedono molto tempo di esecuzione.
 Il debugger di @command{gawk} accetta solo codice sorgente fornito con
 l'opzione @option{-f}.
 Se si sta usando uno @dfn{script} di shell che contiene un programma
-@command{awk} che fa parte della riga di comando, e si deve usare il debugge,
+@command{awk} che fa parte della riga di comando, e si deve usare il debugger,
 si pu@`o scrivere lo @dfn{script} in un file temporaneo, e quindi usarlo come
 programma, tramite l'opzione @option{-f}.  Ci@`o si potrebbe fare nel modo
 seguente:
@@ -37823,8 +37823,9 @@ specificare a quale spazio-di-nomi appartiene @code{nome}.
 Se vale @code{""} o @code{"awk"}, allora @code{nome} @`e cercato nello
 spazio-di-nomi di default, ossia @code{awk}.
 
-Note that @code{namespace} is a C++ keyword. For interoperability with C++,
-you should avoid using that identifier in C code.
+Si noti che @code{namespace} @`e una parola chiave di C++. Per ragioni di
+interoperabilit@`a con C++, si dovrebbe evitare di usare questo identificativo
+nel codice C.
 
 @item awk_bool_t sym_update(const char *nome, awk_value_t *valore);
 Aggiorna la variabile il cui nome @`e contenuto nella stringa @code{nome},
@@ -40452,7 +40453,7 @@ corretta sul tipo di file.
 
 Per default, se non @`e possibile aprire una directory (p.es. per problemi
 di autorizzazione), @command{gawk} termina l'esecuzione.
-Come @`e il caso per i file normali, questa situazione pu@`o
+Come per i file normali, questa situazione pu@`o
 essere gestita usando una regola @code{BEGINFILE} che controlli il
 contenuto della variabile @code{ERRNO} e stampi un messaggio di
 errore oppure gestisca il problema in qualche altro modo.
@@ -42961,7 +42962,7 @@ di @command{gawk}.
 
 @item
 @cindex Guerrero, Juan Manuel
-Juan Manuel Guerrero ha preso in carico la manutenzione dellla
+Juan Manuel Guerrero ha preso in carico la manutenzione della
 versione DJGPP di @command{gawk}.
 
 @item
@@ -43896,7 +43897,7 @@ Tuttavia si conclude regolarmente, e poi @samp{make} procede come ci si
 aspetta.
 
 @cindex installare @command{gawk} @subentry su Cygwin
-SI pu@`o anche installare @command{gawk} con la procedura di installazione
+Si pu@`o anche installare @command{gawk} con la procedura di installazione
 normalmente usata per tutto il software Cygwin.
 In generale, Cygwin fornisce l'ultima versione rilasciata di @command{gawk}.
 
@@ -46678,7 +46679,7 @@ sono @code{sqrt()} ([square root], la  radice quadrata di un numero) e
 @command{gawk} fornisce funzioni per la gestione di data e ora,
 le operazioni a livello di bit, l'ordinamento di
 vettori, il controllo di tipo [di variabile] e la traduzione di stringhe
-in fase di esecuzione di progranna.
+in fase di esecuzione di programma.
 (@xref{Funzioni predefinite}).
 
 @item @command{gawk}
