Update copyright years in pc/ files.

--- a/pc/Makefile.ext
+++ b/pc/Makefile.ext
@@ -1,6 +1,6 @@
 # extension/Makefile for the MinGW build
 #
-# Copyright (C) 2013 Free Software Foundation, Inc.
+# Copyright (C) 2013, 2015, 2017 Free Software Foundation, Inc.
 
 # This Makefile.in is free software; the Free Software Foundation
 # gives unlimited permission to copy and/or distribute it,
