--- a/Makefile.in
+++ b/Makefile.in
@@ -279,9 +279,9 @@ CTAGS = ctags
 CSCOPE = cscope
 DIST_SUBDIRS = support . extension extras doc awklib po test
 am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/configh.in ABOUT-NLS \
-	AUTHORS COPYING ChangeLog INSTALL NEWS README TODO awkgram.c \
-	command.c compile config.guess config.rpath config.sub depcomp \
-	install-sh missing mkinstalldirs ylwrap
+	AUTHORS COPYING ChangeLog INSTALL NEWS README TODO ar-lib \
+	awkgram.c command.c compile config.guess config.rpath \
+	config.sub depcomp install-sh missing mkinstalldirs ylwrap
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 distdir = $(PACKAGE)-$(VERSION)
 top_distdir = $(distdir)
@@ -330,6 +330,7 @@ pkgdatadir = $(datadir)/awk
 ACLOCAL = @ACLOCAL@
 AMTAR = @AMTAR@
 AM_DEFAULT_VERBOSITY = @AM_DEFAULT_VERBOSITY@
+AR = @AR@
 AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
@@ -407,6 +408,7 @@ abs_builddir = @abs_builddir@
 abs_srcdir = @abs_srcdir@
 abs_top_builddir = @abs_top_builddir@
 abs_top_srcdir = @abs_top_srcdir@
+ac_ct_AR = @ac_ct_AR@
 ac_ct_CC = @ac_ct_CC@
 acl_shlibext = @acl_shlibext@
 am__include = @am__include@
