--- a/Makefile.in
+++ b/Makefile.in
@@ -290,8 +290,8 @@ am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/configh.in \
 	awkgram.c build-aux/ChangeLog build-aux/ar-lib \
 	build-aux/compile build-aux/config.guess \
 	build-aux/config.rpath build-aux/config.sub build-aux/depcomp \
-	build-aux/install-sh build-aux/missing build-aux/texinfo.tex \
-	build-aux/ylwrap command.c missing mkinstalldirs
+	build-aux/install-sh build-aux/ltmain.sh build-aux/missing \
+	build-aux/ylwrap command.c mkinstalldirs
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 distdir = $(PACKAGE)-$(VERSION)
 top_distdir = $(distdir)
