Change FIXME in the manual into a real cross reference.

--- a/doc/gawktexi.in
+++ b/doc/gawktexi.in
@@ -33373,7 +33373,7 @@ should also be treated as read-only.  However, unlike strings,
 memory for MPFR/GMP values allocated by an extension and passed
 into @command{gawk} is @emph{copied} by @command{gawk}; the extension
 should then free the values itself to avoid memory leaks. This is
-discussed further in @strong{FIXME}.
+discussed further in @strong{API Ownership of MPFR and GMP Values}.
 
 @item
 The API defines several simple @code{struct}s that map values as seen
